--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -50,8 +50,8 @@
         margin: 2em auto;
       }
     </style>
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+    <!--script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script-->
+    <!--script>(adsbygoogle = window.adsbygoogle || []).push({});</script-->
 
   </body>
 </html>
