--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -21,14 +21,14 @@
 
     <div class="initial-content">
       {{ content }}
-      <div align="center" style="margin: 1em 0;">
+      <!--div align="center" style="margin: 1em 0;">
         <ins class="adsbygoogle"
              style="display:block; border-bottom: initial;"
              data-ad-client="ca-pub-7328585512091257"
              data-ad-slot="3049671934"
              data-ad-format="auto"
              data-full-width-responsive="true"></ins>
-      </div>
+      </div-->
     </div>
 
     {% if site.search == true %}
