--- a/docs/_layouts/single.html
+++ b/docs/_layouts/single.html
@@ -65,14 +65,14 @@ layout: default
   {% comment %}<!-- only show related on a post page when `related: true` -->{% endcomment %}
   {% if page.id and page.related and site.related_posts.size > 0 %}
     <div class="page__related">
-      <div align="center" style="margin: 1em 0;">
+      <!--div align="center" style="margin: 1em 0;">
         <ins class="adsbygoogle"
               style="display:block; border-bottom: initial;"
               data-ad-client="ca-pub-7328585512091257"
               data-ad-slot="3049671934"
               data-ad-format="auto"
               data-full-width-responsive="true"></ins>
-      </div>
+      </div-->
       <h2 class="page__related-title">{{ site.data.ui-text[site.locale].related_label | default: "You May Also Enjoy" }}</h2>
       <div class="grid__wrapper">
         {% for post in site.related_posts limit:4 %}
